<resources>
    <string name="app_name">cakeComand</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="change_order">Change Order</string>
    <string name="add_order">Add order</string>
    <string name="remove_order">Remove order</string>
    <string name="show_all_by_date">Show orders by date</string>
    <string name="show_all_avalible_orders">Show all Orders</string>
    <string name="searchOrder">searchOrder</string>
    <string name="TVsetData">Enter the date</string>
    <string name="TVSetTime">Enter time</string>
    <string name="TVSetWeight">Weight of cake</string>
    <string name="TVinsription">Inscription</string>
    <string name="SWwithPhoto">With Photo</string>
    <string name="Support">Support</string>
    <string name="TVAditionalComent">Aditional coment</string>
    <string name="fixDate">Fix Date</string>
    <!-- Strings related to login -->


</resources>
